objects/Timing__c.object
<CustomObject>
    <fields>
        <fullName>Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching</label>
        <referenceTo>Coaching__c</referenceTo>
        <relationshipLabel>Timings</relationshipLabel>
        <relationshipName>Timings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <label>Staff Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ravi</fullName>
                </value>
                <value>
                    <fullName>MOhan</fullName>
                </value>
                <value>
                    <fullName>John</fullName>
                </value>
                <value>
                    <fullName>Balu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_of_Batch__c</fullName>
        <label>Time of Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Timing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>